--- a/index.html
+++ b/index.html
@@ -23,95 +23,126 @@
 
 <body style="background-image: url(polaroid_@2X.png)">
   <div id='page'>
-    <div class="container-fluid">
 
-      <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#" style="
-          margin-left: 350px;"></a>
-        <h3> Carina Ullman</h3>
-        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarText"
-          aria-controls="navbarText" aria-expanded="false" aria-label="Toggle navigation">
-          <span class="navbar-toggler-icon"></span>
-        </button>
-        <div class="collapse navbar-collapse" id="navbarText" style="
-        margin-left: 650px;">
-          <ul class="navbar-nav mr-auto">
-            <li class="nav-item active">
-
-              <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Portfolio <span class="sr-only">(current)</span></a>
-            </li>
-            <li class="nav-item active">
-              <a class="nav-link" href="#">Contact Me<span class="sr-only">(current)</span></a>
-            </li>
-          </ul>
-
-        </div>
-
-
-    </div>
+    <nav class="navbar navbar-light bg-light">
+      <a class="navbar-brand">Carina Ullman</a>
+      <form class="form-inline">
+        <a href="#">About Me</a> |
+        <a href="#">Portfolio</a> |
+        <a href="#">Contact</a>
+      </form>
     </nav>
 
-  </div>
-  <br><br>
+    <!-- <div class="container-fluid">
 
-
-
-
-  <div class="container" style="border: 5px; solid; grey;">
-    <div class="row">
-
-      <div class="col-sm-12" style="background-color: white; border: 2px solid lightgray; padding-top: 20px;">
+      <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <div class="row">
-                <div class="col-sm-4" style="padding-left: 30px; color: teal;">
-          <h4>About Me</h4>
-        </div>
-        </div>
-        </div>
-        <hr>
-
-
-        <div class="container" style="padding-bottom: 80px; padding-top: 80px;">
           <div class="row">
-            <div class="col-sm-4">
-              <img src="profile_pic.jpg" width="300" height="300" alt="fam pic" class="bio-image"
-                style="padding-left: 20px; padding-bottom: 40px;">
-            </div>
-            <div class="col-sm-8" style="padding-right: 60px;">
 
-              Hello ! Thanks for reading
-              my bio. I was born and raised in a
-              lovely city called Santa Barbara. At the age
-              of 18 I joined the United States Air Force and worked in health services management (a fancy name for
-              medical admin). In San Antonio,
-              TX I worked in the Emergency Room of a Level I Trauma hospital and realized I wanted to be in the action
-              as
-              a nurse. I worked full time and went to school full time and finally graduated with my BSN in 2016. I am
-              very proud of being a nurse and I hope to take my skills to the next level and write medical software
-              since
-              I am familiar with the user's needs. I love to challenge myself and I am doing so
-              in DU's Coding Bootcamp.
-              On my off time I enjoy snowboarding,
-              yoga,
-              hiking (all things active),
-              traveling and seeing obscure bands at small venues. I am very excited to see where this Boot Camp takes
-              me!
-            </div>
+            <div class="col-sm">
 
+              <div class="container">
+                <div class="row">
+                  <div class="col-sm-9">
+                    <span> Carina Ullman</span>
+
+                    <div class="collapse navbar-collapse" id="navbarText">
+                      <ul class="navbar-nav mr-auto">
+                        <li class="nav-item active">
+                          <div class="col-sm-1">
+                            <a class="nav-link" href="#">About Me <span class="sr-only">(current)</span></a>
+                          </div>
+                        </li>
+                        
+                      </ul>
+                    </div>
+                  </div>
+                </div>
+              </div>
+
+            </div>
+          </div>
+        </div>
+    </div>
+
+
+
+
+    </nav> -->
+
+
+    <br><br>
+
+
+
+
+    <div class="container" style="border: 1px solid grey;">
+      <div class="row">
+
+        <div class="col-sm-12" style="background-color: white; border: 2px solid lightgray; padding-top: 20px;">
+          <div class="container">
+            <div class="row">
+              <div class="col-sm-4" style="padding-left: 30px; color: teal;">
+                <h4>About Me</h4>
+              </div>
+            </div>
+          </div>
+          <hr>
+
+
+          <div class="container" style="padding-bottom: 80px; padding-top: 80px;">
+            <div class="row">
+              <div class="col-sm-4">
+                <img src="profile_pic.jpg" width="300" height="300" alt="responsive image" class="img-fluid"
+                  style="padding-left: 20px; padding-bottom: 40px;">
+              </div>
+              <div class="col-sm-8" style="padding-right: 60px;">
+
+                Hello ! Thanks for reading
+                my bio. I was born and raised in a
+                lovely city called Santa Barbara. At the age
+                of 18 I joined the United States Air Force and worked in health services management (a fancy name for
+                medical admin). In San Antonio,
+                TX I worked in the Emergency Room of a Level I Trauma hospital and realized I wanted to be in the action
+                as
+                a nurse. I worked full time and went to school full time and finally graduated with my BSN in 2016. I am
+                very proud of being a nurse and I hope to take my skills to the next level and write medical software
+                since
+                I am familiar with the user's needs. I love to challenge myself and I am doing so
+                in DU's Coding Bootcamp.
+                On my off time I enjoy snowboarding,
+                yoga,
+                hiking (all things active),
+                traveling and seeing obscure bands at small venues. I am very excited to see where this Boot Camp takes
+                me!
+              </div>
+
+            </div>
           </div>
         </div>
       </div>
-    </div>
 
+
+    </div>
 
   </div>
 
+  <style type="text/css">
+    .footer {
+      background-color: #666666;
+      height: 90px;
+      width: 100%;
+      position: absolute;
+      bottom: 0px;
+      border-top: 15px solid #4aaaa5;
+      color: white;
+      text-align: center;
+      
+    }
+  </style>
 
   <div class='footer'><br><br>Copyright ©</div>
-
+  </div>
 </body>
 
 </html>
