--- a/index.html
+++ b/index.html
@@ -32,9 +32,9 @@
               <a class="navbar-brand" style="text:strong; color:teal ">Carina Ullman</a>
 
               
-                <a href="#">About Me</a> |
-                <a href="portfolio.html">Portfolio</a> |
-                <a href="contact.html">Contact</a>
+                <a href="#"style="color: black; text-decoration: none;">About Me</a> |
+                <a href="portfolio.html"style="color: black; text-decoration: none;">Portfolio</a> |
+                <a href="contact.html"style="color: black; text-decoration: none;">Contact</a>
               
             </div>
           </div>
