--- a/portfolio.html
+++ b/portfolio.html
@@ -96,7 +96,7 @@
 
     <style type="text/css">
         .footer {
-            background-color: #666666;
+            background-color: #666666; /width: 100%; / /height: 300px;/ /height: 100:/ overflow: none;
             height: 90px;
             width: 100%;
             position: absolute;
