--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<body style="background-image: url(polaroid_@2X.png)">
+<body style="background-image: url(polaroid_@2X.png); margin-bottom: 100px;">
   <div id='page'>
     <div class="container-fluid">
       <nav class="navbar navbar-light bg-light">
@@ -100,11 +100,13 @@
 
   <style type="text/css">
     .footer {
-      background-color: #666666; /width: 100%; / /height: 300px;/ /height: 100:/ overflow: none;
-      height: 90px;
-      width: 100%;
+      background-color: gray;
       position: absolute;
-      bottom: 0px;
+      left: 0;
+      bottom: 0;
+      height: 100px;
+      width: 100%;
+      overflow: hidden;
       border-top: 15px solid #4aaaa5;
       color: white;
       text-align: center;
