--- a/portfolio.html
+++ b/portfolio.html
@@ -24,7 +24,7 @@
     integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM"
     crossorigin="anonymous"></script>
 
-<body style="background-image: url(polaroid_@2X.png)">
+    <body style="background-image: url(polaroid_@2X.png); margin-bottom: 100px;">
     <div id='page'>
         <div class="container-fluid">
             <nav class="navbar navbar-light bg-light">
@@ -96,17 +96,20 @@
 
     <style type="text/css">
         .footer {
-            background-color: #666666; /width: 100%; / /height: 300px;/ /height: 100:/ overflow: none;
-            height: 90px;
-            width: 100%;
-            position: absolute;
-            bottom: 0px;
-            border-top: 15px solid #4aaaa5;
-            color: white;
-            text-align: center;
-
+          background-color: gray;
+          position: absolute;
+          left: 0;
+          bottom: 0;
+          height: 100px;
+          width: 100%;
+          overflow: hidden;
+          border-top: 15px solid #4aaaa5;
+          color: white;
+          text-align: center;
+    
         }
-    </style>
+      </style>
+    
 
     <div class='footer'><br><br>Copyright ©</div>
     </div>
