Footer is now fixed more literally

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en">
+<html lang="en" style= "position: relative; min-height: 100%;">
 
 <head>
   <!-- Required meta tags -->
@@ -21,7 +21,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-<body style="background-image: url(polaroid_@2X.png); margin-bottom: 100px;">
+<body style="background-image: url(polaroid_@2X.png); margin-bottom: 0 0 100px;">
   <div id='page'>
     <div class="container-fluid">
       <nav class="navbar navbar-light bg-light">
