--- a/index.html
+++ b/index.html
@@ -110,6 +110,7 @@
       border-top: 15px solid #4aaaa5;
       color: white;
       text-align: center;
+      position: sticky;
 
     }
   </style>
