--- a/portfolio.html
+++ b/portfolio.html
@@ -97,7 +97,7 @@
     <style type="text/css">
         .footer {
           background-color: gray;
-          position: absolute;
+          position: absolute;*
           left: 0;
           bottom: 0;
           height: 100px;
@@ -106,6 +106,7 @@
           border-top: 15px solid #4aaaa5;
           color: white;
           text-align: center;
+          position: sticky
     
         }
       </style>
