That Sticky Footer Tho

--- a/portfolio.html
+++ b/portfolio.html
@@ -97,16 +97,15 @@
     <style type="text/css">
         .footer {
           background-color: gray;
-          position: absolute;*
+          position: absolute;
           left: 0;
           bottom: 0;
           height: 100px;
           width: 100%;
-          overflow: hidden;
           border-top: 15px solid #4aaaa5;
           color: white;
           text-align: center;
-          position: sticky
+    
     
         }
       </style>
