--- a/contact.html
+++ b/contact.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style= "position: relative; min-height: 100%;">
+<html lang="en" style="position: relative; min-height: 100%;">
 
 <head>
   <!-- Required meta tags -->
@@ -21,7 +21,7 @@
 <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js"
   integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 
-  <body style="background-image: url(polaroid_@2X.png); margin-bottom: 0 0 100px;">
+<body style="background-image: url(polaroid_@2X.png); margin-bottom: 0 0 100px;">
   <div id='page'>
     <div class="container-fluid">
       <nav class="navbar navbar-light bg-light">
@@ -31,10 +31,15 @@
             <div class="col-sm">
               <a class="navbar-brand" style="text:strong; color:teal ">Carina Ullman</a>
 
-
               <a href="index.html" style="color: black; text-decoration: none;">About Me</a> |
               <a href="portfolio.html" style="color: black; text-decoration: none;">Portfolio</a> |
-              <a href="#" style="color: black; text-decoration: none;">Contact</a>
+              <a href="#" style="color: black; text-decoration: none;">Contact</a> |
+              <a href="https://github.com/carinalullman" style="color: black; text-decoration: none"> Github </a> |
+              <a href="https://www.linkedin.com/in/carina-ullman-0079782/" style="color: black; text-decoration: none">
+                Linkedin <a> |
+                  <a href="https://github.com/carinalullman/resume/blob/master/Carina%20Ullman%20Bootcamp%20Resume%2011.3.19.pdf"
+                    style="color: black; text-decoration: none"> Resume </a>
+
 
             </div>
           </div>
@@ -43,11 +48,7 @@
     </div>
   </div>
 
-
   <br><br>
-
-
-
 
   <div class="container" style="border: 1px solid grey;">
     <div class="row">
@@ -57,6 +58,8 @@
           <div class="row">
             <div class="col-sm-4" style="padding-left: 30px; color: teal;">
               <h4>Contact Me</h4>
+              <h5>Email: CarinaL.Ullman@gmail.com</h5>
+              <h5>Phone: 720-375-6458</h5>
             </div>
           </div>
         </div>
