--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="en" style= "position: relative; min-height: 100%;">
+<html lang="en" style="position: relative; min-height: 100%;">
 
 <head>
   <!-- Required meta tags -->
@@ -31,10 +31,14 @@
             <div class="col-sm">
               <a class="navbar-brand" style="text:strong; color:teal ">Carina Ullman</a>
 
-
               <a href="#" style="color: black; text-decoration: none;">About Me</a> |
               <a href="portfolio.html" style="color: black; text-decoration: none;">Portfolio</a> |
-              <a href="contact.html" style="color: black; text-decoration: none;">Contact</a>
+              <a href="contact.html" style="color: black; text-decoration: none;">Contact</a> |
+              <a href="https://github.com/carinalullman" style="color: black; text-decoration: none"> Github </a> |
+              <a href="https://www.linkedin.com/in/carina-ullman-0079782/" style="color: black; text-decoration: none">
+                Linkedin <a> |
+                  <a href="https://github.com/carinalullman/resume/blob/master/Carina%20Ullman%20Bootcamp%20Resume%2011.3.19.pdf"
+                    style="color: black; text-decoration: none"> Resume </a>
 
             </div>
           </div>
@@ -109,6 +113,7 @@
       color: white;
       text-align: center;
       position: sticky;
+
 
     }
   </style>
