--- a/portfolio.html
+++ b/portfolio.html
@@ -77,17 +77,47 @@
                                 margin: 10px;
 
                             }
+
+                            h5 {
+                                color: teal;
+                            }
                         </style>
+                        <div>
+                            <h5>Hiking and Food Group Project</h5>
+                            <ul>
 
-                        <img src="images/TommyAngry.jpg" height="200" width="250" />
-                        <div class="text-block">
-
-
+                                <li><a href="https://carinalullman.github.io/Group-Project/"
+                                        style="color: gray; text-decoration: underline;">
+                                        <h5>Deployed Version</h5>
+                                    </a></li>
+                                <li><a href="https://github.com/carinalullman/Group-Project"
+                                        style="color: gray; text-decoration: underline;">
+                                        <h5>GitHub Repository</h5>
+                                    </a></li>
+                                <li><a href="https://github.com/carinalullman/Group-Project/blob/master/assets/Group%20Project%20Screenshot.png?raw=true"
+                                        style="color: gray; text-decoration: underline;">
+                                        <h5>Screenshot of Deployed Application</h5>
+                                    </a></li>
+                            </ul>
                         </div>
-                        <img src="images/CarinaFam.jpg" height="200" width="250" />
-                        <img src="images/CarinaTommy.jpg" height="200" width="250" />
-                        <img src="images/CarinaMichael.jpg" height="200" width="250" />
-                        <img src="images/TommyZoo.jpg" height="200" width="250" />
+                        <div>
+                            <h5>Office Quiz</h5>
+                            <ul>
+
+                                <li><a href="https://carinalullman.github.io/Code-Quiz/"
+                                        style="color: gray; text-decoration: underline;">
+                                        <h5>Deployed Version</h5>
+                                    </a></li>
+                                <li><a href="https://github.com/carinalullman/Code-Quiz"
+                                        style="color: gray; text-decoration: underline;">
+                                        <h5>GitHub Repository</h5>
+                                    </a></li>
+                                <li><a href="https://github.com/carinalullman/Code-Quiz/blob/master/Screenshot%20Quiz.png?raw=true"
+                                        style="color: gray; text-decoration: underline;">
+                                        <h5>Screenshot of Deployed Application</h5>
+                                    </a></li>
+                            </ul>
+                        </div>
                     </div>
                 </div>
             </div>
