--- a/portfolio.html
+++ b/portfolio.html
@@ -70,20 +70,22 @@
                 <hr>
 
 
-                <div class="container" style="padding-bottom: 80px; padding-top: 80px;">
+                <div class="container" style="padding-bottom: 40px; padding-top: 40px;">
                     <div class="row">
                         <style type="text/css">
-                            img {
-                                margin: 10px;
-
-                            }
-
                             h5 {
                                 color: teal;
                             }
                         </style>
-                        <div>
-                            <h5>Hiking and Food Group Project</h5>
+
+                        <div class="row">
+                            <div class="col-md-12">
+                                <h5>Hiking and Food Group Project</h5>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="row">
+                        <div class="col-md-8">
                             <ul>
 
                                 <li><a href="https://carinalullman.github.io/Group-Project/"
@@ -99,9 +101,14 @@
                                         <h5>Screenshot of Deployed Application</h5>
                                     </a></li>
                             </ul>
+
                         </div>
-                        <div>
-                            <h5>Office Quiz</h5>
+                    </div>
+
+
+                    <h5>Office Quiz</h5>
+                    <div class="row">
+                        <div class="col-md-8">
                             <ul>
 
                                 <li><a href="https://carinalullman.github.io/Code-Quiz/"
@@ -122,6 +129,8 @@
                 </div>
             </div>
         </div>
+    </div>
+
 
 
     </div>
