--- a/portfolio.html
+++ b/portfolio.html
@@ -80,7 +80,7 @@
 
                         <div class="row">
                             <div class="col-md-12">
-                                <h5>Hiking and Food Group Project</h5>
+                                <h5>Hiking and Food Group Project One</h5>
                             </div>
                         </div>
                     </div>
@@ -106,20 +106,20 @@
                     </div>
 
 
-                    <h5>Office Quiz</h5>
+                    <h5>deedList Group Project Two</h5>
                     <div class="row">
                         <div class="col-md-8">
                             <ul>
 
-                                <li><a href="https://carinalullman.github.io/Code-Quiz/"
+                                <li><a href="https://fathomless-bayou-64097.herokuapp.com/"
                                         style="color: gray; text-decoration: underline;">
                                         <h5>Deployed Version</h5>
                                     </a></li>
-                                <li><a href="https://github.com/carinalullman/Code-Quiz"
+                                <li><a href="https://github.com/AdenasGittinIt/deedlist"
                                         style="color: gray; text-decoration: underline;">
                                         <h5>GitHub Repository</h5>
                                     </a></li>
-                                <li><a href="https://github.com/carinalullman/Code-Quiz/blob/master/Screenshot%20Quiz.png?raw=true"
+                                <li><a href="https://github.com/carinalullman/BootstrapPortfolio/blob/master/images/pic%20of%20deedlist.png"
                                         style="color: gray; text-decoration: underline;">
                                         <h5>Screenshot of Deployed Application</h5>
                                     </a></li>
