--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
               medical admin). In San Antonio,
               TX I worked in the Emergency Room of a Level I Trauma hospital and realized I wanted to be in the action
               as
-              a nurse. I worked full time and went to school full time and finally graduated with my BSN in 2016. I am
+              a nurse. I worked full time while going to school part time and finally graduated with my BSN in 2016. I am
               very proud of being a nurse and I hope to take my skills to the next level and write medical software
               since
               I am familiar with the user's needs. I love to challenge myself and I am doing so
