Fixed small issues with the portfolio

--- a/index.html
+++ b/index.html
@@ -73,9 +73,8 @@
             </div>
             <div class="col-sm-8" style="padding-right: 60px;">
 
-              Hello ! Thanks for reading
-              my bio. I was born and raised in a
-              lovely city called Santa Barbara. At the age
+              Hello there! Thanks for reading
+              my bio. I was born and raised in lovely Santa Barbara, CA. At the age
               of 18 I joined the United States Air Force and worked in health services management (a fancy name for
               medical admin). In San Antonio,
               TX I worked in the Emergency Room of a Level I Trauma hospital and realized I wanted to be in the action
