Fixed some small issues with portfolio

--- a/index.html
+++ b/index.html
@@ -80,12 +80,12 @@
               TX I worked in the Emergency Room of a Level I Trauma hospital and realized I wanted to be in the action
               as
               a nurse. I worked full time while going to school part time and finally graduated with my BSN in 2016. I am
-              very proud of being a nurse and I hope to take my skills to the next level and write medical software
+              very proud of being a nurse. I hope to take my skills to the next level and write medical software
               since
               I am familiar with the user's needs. I love to challenge myself and I am doing so
               in DU's Coding Bootcamp.
               On my off time I enjoy snowboarding,
-              yoga,
+              yoga, going to the gym,
               hiking (all things active),
               traveling and seeing obscure bands at small venues. I am very excited to see where this Boot Camp takes
               me!
