Fixing the footer

--- a/portfolio.html
+++ b/portfolio.html
@@ -140,7 +140,7 @@
     <style type="text/css">
         .footer {
             background-color: gray;
-            position: absolute;
+            position: sticky;
             left: 0;
             bottom: 0;
             height: 100px;
