--- a/contact.html
+++ b/contact.html
@@ -101,7 +101,7 @@
   <style type="text/css">
     .footer {
       background-color: gray;
-      position: absolute;
+      position: sticky;
       left: 0;
       bottom: 0;
       height: 100px;
