--- a/portfolio.html
+++ b/portfolio.html
@@ -127,7 +127,7 @@
                         <div class="col-md-8">
                             <ul>
 
-                                <li><a href="https://fathomless-bayou-64097.herokuapp.com/"
+                                <li><a href="https://deedlist.herokuapp.com/"
                                         style="color: gray; text-decoration: underline;">
                                         <h5>Deployed Version</h5>
                                     </a></li>
