Small bio changes

--- a/index.html
+++ b/index.html
@@ -87,7 +87,7 @@
               On my off time I am a mom to a special needs kiddo. I enjoy snowboarding,
               yoga, going to the gym,
               hiking (all things active),
-              traveling and seeing obscure bands at small venues. I am very excited to see where this Boot Camp takes
+              traveling and seeing obscure bands at small venues. <br>I am very excited to see where this Boot Camp takes
               me!
             </div>
 
