--- a/index.html
+++ b/index.html
@@ -74,15 +74,13 @@
             <div class="col-sm-8" style="padding-right: 60px;">
 
               Hello there! Thanks for reading
-              my bio. <br><br>I was born and raised in lovely Santa Barbara, CA. At the age
+              my bio. <br><br>I was born and raised in Southern California. At the age
               of 18, I joined the United States Air Force and worked in health services management (a fancy name for
               medical admin). In San Antonio,
               TX I worked in the Emergency Room of a Level I Trauma hospital and realized I wanted to be in the action
               as
               a nurse. I worked full time while going to school part time and finally graduated with my BSN in 2016. I am
-              very proud of being a nurse. I hope to take my skills to the next level and write medical software
-              since
-              I am familiar with the user's needs. I love to challenge myself and I am doing so
+              very proud of being a nurse. I love to challenge myself and I am doing so
               in DU's Coding Bootcamp.<br><br>
               On my off time I am a mom to a special needs kiddo. I enjoy snowboarding,
               yoga, going to the gym,
